force-app/main/default/objects/Book__c/fields/Book_Name__c.field-meta.xml
<CustomField>
    <fullName>Book_Name__c</fullName>
    <label>Book Name</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>