force-app/main/default/objects/Book__c/fields/Book_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Book_Quantity__c</fullName>
    <label>Book Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>