force-app/main/default/objects/Book__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Academics</fullName>
            </value>
            <value>
                <fullName>Novel</fullName>
            </value>
            <value>
                <fullName>Magazine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>