force-app/main/default/objects/Book__c/fields/Published_Year__c.field-meta.xml
<CustomField>
    <fullName>Published_Year__c</fullName>
    <label>Published Year</label>
    <length>100</length>
    <type>Text</type>
</CustomField>