force-app/main/default/objects/Book__c/validationRules/Book_Qunatity_Cannot_Be_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Book_Qunatity_Cannot_Be_0</fullName>
    <active>true</active>
    <errorConditionFormula>Book_Quantity__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Book_Quantity__c</errorDisplayField>
    <errorMessage>Book quantity should be more than 0.</errorMessage>
</ValidationRule>