force-app/main/default/objects/Book__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Book_Name__c</columns>
    <columns>Author_Name__c</columns>
    <columns>Publisher__c</columns>
    <columns>Published_Year__c</columns>
    <columns>Book_Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>